[package]
name = "ch04-async-await-primer"
version = "0.1.0"
authors = ["wusung <twkoci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "^0.12"
hyper-router = "^0.5"
# To setup some sort of runtime needed by Hyper, we will use the Tokio runtime.
tokio = { version = "0.2.21", features = ["macros", "tcp", "dns", "io-util"] }


# (only for testing)
reqwest = "0.10.4"
futures = "0.3.5"
